feat: added more accessibility and SEO changes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Portfolio showcasing Nina Carducci's photography work over the years.">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -58,7 +59,7 @@
 </header>
 <section id="about">
 	<div class="picture left">
-		<img src="./assets/images/nina.jpg">
+		<img src="./assets/images/nina.jpg" alt="Portrait of Nina Carducci">
 	</div>
 	<div id="about-me">
 		<h3 class="about-me__title">A propos de moi</h3>
