--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Portfolio showcasing Nina Carducci's photography work over the years.">
+	<meta name="description" content="Portfolio de Nina Carducci, photographe située à Bordeaux.">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,6 +14,18 @@
 	<script src="./assets/maugallery.js"></script>
 	<script src="./assets/scripts.js"></script>
 	<title>Nina Carducci</title>
+
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:title" content="Portfolio Nina Carducci">
+	<meta name="twitter:description" content="Portfolio de Nina Carducci, photographe située à Bordeaux.">
+	<meta name="twitter:creator" content="@ninacarducci_1">
+	<meta name="twitter:image" content="./assets/images/nina.jpg">
+
+	<meta property="og:url" content="https://chilluno.github.io">
+	<meta property="og:type" content="portfolio">
+	<meta property="og:title" content="Nina Carducci">
+	<meta property="og:description" content="Portfolio de Nina Carducci, photographe située à Bordeaux.">
+	<meta property="og:image" content="./assets/images/nina.jpg">
 </head>
 <body>
 <header class="top-header">
