--- a/index.html
+++ b/index.html
@@ -73,11 +73,13 @@
 	<div class="picture left">
 		<img src="./assets/images/nina.jpg" alt="Portrait of Nina Carducci">
 	</div>
-	<div id="about-me">
+	<div itemscope id="about-me" itemtype="https://schema.org/Person">
 		<h3 class="about-me__title">A propos de moi</h3>
 		<h6 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h6>
 		<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
 			C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
+			<p>Adresse: <span itemprop="streetAddress">68 avenue Alsace-Lorraine</span>, <span itemprop="postalCode">33200</span> <span itemprop="addressLocality">Bordeaux</span></p>
+			<p>Téléphone: <span itemprop="telephone">05 56 67 78 89</span> (disponible du lundi au vendredi de 10h à 19h)</p>
 	</div>
 </section>
 <section id="gallery">
