fix: optimized the image sizes and format some more

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </header>
 <section id="about">
 	<div class="picture left">
-		<img src="./assets/images/nina.jpg" alt="Portrait of Nina Carducci">
+		<img src="./assets/images/nina.webp" alt="Portrait of Nina Carducci">
 	</div>
 	<div itemscope id="about-me" itemtype="https://schema.org/Person">
 		<h3 class="about-me__title">A propos de moi</h3>
@@ -166,7 +166,7 @@
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images/camera.jpg" alt="Image of a camera">
+			<img src="./assets/images/camera.webp" alt="Image of a camera">
 		</div>
 	</div>
 </footer>
