--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<li><a href="#gallery">Galerie</a></li>
 			<li><a href="#services">Service</a></li>
 			<li><a href="#contact">Contact</a></li>
-			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.png" alt="Instagram Logo"></a></li>
+			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img id="insta-logo" src="assets/images/instagram.png" alt="Instagram Logo"></a></li>
 		</ul>
 	</nav>
 </header>
