feat: added width and height to some images to avoid Layout Shifts

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<li><a href="#gallery">Galerie</a></li>
 			<li><a href="#services">Service</a></li>
 			<li><a href="#contact">Contact</a></li>
-			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img id="insta-logo" src="assets/images/instagram.png" alt="Instagram Logo"></a></li>
+			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img id="insta-logo" width="20" height="11" src="assets/images/instagram.png" alt="Instagram Logo"></a></li>
 		</ul>
 	</nav>
 </header>
@@ -52,13 +52,13 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="Image of a Businessman crossing the Road">
+				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" width="1280" height="720" class="d-block w-100" alt="Image of a Businessman crossing the Road">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="Image of a Crowd cheering at a Concert">
+				<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" width="1280" height="720" class="d-block w-100" alt="Image of a Crowd cheering at a Concert">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="Image of a Bride and a Groom kissing">
+				<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" width="1280" height="720" class="d-block w-100" alt="Image of a Bride and a Groom kissing">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -73,7 +73,7 @@
 </header>
 <section id="about">
 	<div class="picture left">
-		<img src="./assets/images/nina.webp" alt="Portrait of Nina Carducci">
+		<img src="./assets/images/nina.webp" width="600" height="500" alt="Portrait of Nina Carducci">
 	</div>
 	<div itemscope id="about-me" itemtype="https://schema.org/Person">
 		<h3 class="about-me__title">A propos de moi</h3>
@@ -168,7 +168,7 @@
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images/camera.webp" alt="Image of a camera">
+			<img src="./assets/images/camera.webp" width="600" height="400" alt="Image of a camera">
 		</div>
 	</div>
 </footer>
