--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Portfolio de Nina Carducci, photographe située à Bordeaux.">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.critical.css">
-	<link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="./assets/bootstrap/bootstrap.css">
+	<link rel="stylesheet" media="print" onload="this.media='all'" href="./assets/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=optional">
-	<link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=optional">
+	<link rel="stylesheet" media="print" onload="this.media='all'" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=optional">
 	<meta charset="UTF-8">
 	<meta http-equiv="Cache-control" content="public">
 	<script defer src="./assets/bootstrap/bootstrap.bundle.js"></script>
