feat: added lazy loading to off screen images on page load

--- a/index.html
+++ b/index.html
@@ -88,15 +88,15 @@
 	<h3 class="title">Portfolio</h3>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" alt="Concert Room Picture" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" alt="Businessman Picture" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" alt="A businesswoman smiling with Coworkers" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" alt="Groom and Wife Holding Hands" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" alt="Man with closed eyes faces the Sunshine" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" alt="Married Couple holding Hands" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" alt="Woman looking through a fence" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp"/>
-			<img data-gallery-tag="Concert" class="gallery-item" alt="Singer Live Performance" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" alt="Businesswoman smiling in Office" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"/>
+			<img data-gallery-tag="Concert" class="gallery-item" alt="Concert Room Picture" loading="lazy" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" alt="Businessman Picture" loading="lazy" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" alt="A businesswoman smiling with Coworkers" loading="lazy" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"/>
+			<img data-gallery-tag="Mariages" class="gallery-item" alt="Groom and Wife Holding Hands" loading="lazy" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"/>
+			<img data-gallery-tag="Portrait" class="gallery-item" alt="Man with closed eyes faces the Sunshine" loading="lazy" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"/>
+			<img data-gallery-tag="Mariages" class="gallery-item" alt="Married Couple holding Hands" loading="lazy" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"/>
+			<img data-gallery-tag="Portrait" class="gallery-item" alt="Woman looking through a fence" loading="lazy" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp"/>
+			<img data-gallery-tag="Concert" class="gallery-item" alt="Singer Live Performance" loading="lazy" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" alt="Businesswoman smiling in Office" loading="lazy" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"/>
 		</div>
 	</section>
 	<section class="quote">
@@ -168,7 +168,7 @@
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images/camera.webp" width="600" height="450" alt="Image of a camera">
+			<img src="./assets/images/camera.webp" width="600" height="450" loading="lazy" alt="Image of a camera">
 		</div>
 	</div>
 </footer>
