--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap">
-	<link rel="preload" href="./assets/bootstrap/bootstrap.css">
+	<link rel="preload" as="style" href="./assets/bootstrap/bootstrap.css">
 	<link rel="stylesheet" media="print" onload="this.media='all'" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap">
 	<link rel="stylesheet" media="print" onload="this.media='all'" href="./assets/bootstrap/bootstrap.css">
 	<meta charset="UTF-8">
