--- a/index.html
+++ b/index.html
@@ -16,6 +16,23 @@
 	<script defer src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script defer src="./assets/maugallery.js"></script>
 	<script defer src="./assets/scripts.js"></script>
+
+	<script type="application/ld+json">
+		{
+			"@context": "http://www.schema.org",
+			"@type": "Organization",
+			"name": "Nina Carducci",
+			"telephone": "05 56 67 78 89",
+			"openingHours": "Mo,Tu,We,Th,Fr 10:00-19:00",
+			"address": {
+				"@type":"PostalAddress",
+				"addressLocality": "Bordeaux, France",
+				"postalCode": "33200",
+				"streetAddress": "68 avenue Alsace-Lorraine"
+			}
+		 }
+	</script>
+
 	<title>Nina Carducci</title>
 
 	<meta name="twitter:card" content="summary">
@@ -31,8 +48,11 @@
 	<meta property="og:image" content="./assets/images/nina.jpg">
 </head>
 <body>
+
 <header class="top-header">
-	<h3 class="name">Nina Carducci</h3>
+	<div itemscope itemtype="https://schema.org/Person">	
+		<h1 class="name"><span itemprop="name">Nina Carducci</span></h1>
+	</div>
 	<nav class="nav">   
 		<ul>
 			<li><a href="#about">À propos</a></li>
@@ -76,15 +96,14 @@
 	<div class="picture left">
 		<img src="./assets/images/nina.webp" width="600" height="450" alt="Portrait of Nina Carducci">
 	</div>
-	<div itemscope id="about-me" itemtype="https://schema.org/Person">
+	<div itemscope id="about-me">
 		<h3 class="about-me__title">A propos de moi</h3>
 		<h6 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h6>
 		<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
 			C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
-			<p>Adresse: <span itemprop="streetAddress">68 avenue Alsace-Lorraine</span>, <span itemprop="postalCode">33200</span> <span itemprop="addressLocality">Bordeaux</span></p>
-			<p>Téléphone: <span itemprop="telephone">05 56 67 78 89</span> (disponible du lundi au vendredi de 10h à 19h)</p>
 	</div>
 </section>
+
 <section id="gallery">
 	<h3 class="title">Portfolio</h3>
 	<div class="container py-3">
